<?xml version="1.0"?>
<package format="2">
  <name>traffic_light_fetcher</name>
  <version>0.0.0</version>
  <description>The traffic_light_fetcher package</description>

  <maintainer email="Abbasov.Elmar94@gmail.com">Elmar Abbasov</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>video_stream_opencv</depend>
  <depend>geometry_msgs</depend>

  <export></export>
</package>
